--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>my repo</p>
-    <p>this is a new features...</p>
+    <p>this is a new features...(dropdown)</p>
 </body>
 </html>
